# floating-todo

./: .gitignore  LICENSE  PROJECT_HANDOFF.md  Package.swift  README.md  package-lock.json  package.json
.github/workflows/: release.yml  supply-chain-ioc-scan.yml
Resources/: Info.plist
Sources/ToDoCore/App/: FloatingPanelController.swift
Sources/ToDoCore/Models/: TodoModels.swift
Sources/ToDoCore/UI/: FloatingTodoWidget.swift
legacy-macos-swift/Resources/: AppIcon.icns
legacy-macos-swift/Sources/ToDoCore/Resources/: README.md
legacy-macos-swift/Sources/ToDoCore/Store/: TodoStore.swift
legacy-macos-swift/Sources/ToDoModule/: main.swift
legacy-macos-swift/Tests/ToDoCoreTests/: TodoStoreTests.swift
legacy-macos-swift/docs/superpowers/plans/: 2026-06-03-global-memo-drawer.md
legacy-macos-swift/docs/superpowers/specs/: 2026-06-03-global-memo-drawer-design.md
legacy-macos-swift/projects/todo-module-usage-doc_ppt169_20260603/: README.md
legacy-macos-swift/projects/todo-module-usage-doc_ppt169_20260603/sources/: product-usage-source.md
legacy-macos-swift/scripts/: build-app.sh  build-dmg.sh  build-installer.sh  install-local.sh  render-icon.swift
scripts/: iconset.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
