[package]
name = "floating-todo"
version = "0.2.0"
description = "悬浮待办 · 跨平台桌面悬浮待办小组件"
authors = ["gaopengfei"]
edition = "2021"

[lib]
name = "floating_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
